# Auto_Jobs_Applier_AI_Agent

./: README.md  config.py  constants.py  main.py  pyproject.toml  requirements.txt
lib_resume_builder_AIHawk/: __init__.py  manager_facade.py  resume.py  resume_generator.py  style_manager.py  utils.py
lib_resume_builder_AIHawk/resume_style/: style_clean_blue.css  style_default.css  style_modern_blue.css
src/ai_hawk/: job_manager.py  linkedIn_easy_applier.py
src/ai_hawk/llm/: llm_manager.py  provider.py
tests/: test_gpt_answerer_ollama.py  test_ollama_provider.py
webapp/: app.py  bot_runner.py  create_db.sql  models.py
webapp/static/: app.js
webapp/templates/: index.html
