[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-jobs-applier-aihawk"
version = "0.1.0"
description = "AI-powered job application automation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click",
  "httpx~=0.27.2",
  "inputimeout==1.0.4",
  "Levenshtein==0.25.1",
  "loguru==0.7.2",
  "pdfminer.six==20221105",
  "python-dotenv~=1.0.1",
  "PyYAML~=6.0.2",
  "regex==2024.7.24",
  "reportlab==4.2.2",
  "selenium==4.9.1",
  "webdriver-manager==4.0.2",
  "greenlet==3.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-mock",
  "pytest-cov",
]

[project.scripts]
auto-jobs-applier-aihawk = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "constants"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "lib_resume_builder_AIHawk*"]
